--- a/vs/installer/Product.wxs
+++ b/vs/installer/Product.wxs
@@ -19,24 +19,30 @@
       Compressed="yes" 
       InstallScope="perMachine" />
 
+    <MajorUpgrade DowngradeErrorMessage="A newer version of ClickHouse ODBC drivers is already installed." />
+    <MediaTemplate EmbedCab="yes" />
+    
     <!-- Directories -->
     <Directory Id="TARGETDIR" Name="SourceDir">
       <Directory Id="ProgramFiles64Folder">
         <Directory Id="INSTALLFOLDER" Name="ClickHouse ODBC">
+          <Component Id ="PocoLibs" Guid="D348D93A-E952-4248-99A7-BD280965FFDB" Win64='yes'>
+            <File Id='PocoFoundationDll'
+                  Name='PocoFoundation64.dll'
+                  DiskId='1'
+                  Source='..\x64\Release\PocoFoundation64.dll' />
+            <File Id='PocoNetdll'
+                  Name='PocoNet64.dll'
+                  DiskId='1'
+                  Source='..\x64\Release\PocoFoundation64.dll' />            
+          </Component>
+          
           <Component Id="AnsiDriver" Guid="01A07B41-83A6-4119-ABA6-11FAC66D23FE" Win64='yes'>
             <File Id='AnsiDriverDll'
                   Name='clickhouseodbc.dll'
                   DiskId='1'
-                  Source='..\x64\Debug\clickhouseodbc.dll'
+                  Source='..\x64\Release\clickhouseodbc.dll'
                   KeyPath='yes' />
-            <File Id='AnsiPocoFoundationDll'
-                  Name='PocoFoundation64d.dll'
-                  DiskId='1'
-                  Source='..\x64\Debug\PocoFoundation64d.dll' />
-            <File Id='AnsiPocoNetdll'
-                  Name='PocoNet64d.dll'
-                  DiskId='1'
-                  Source='..\x64\Debug\PocoFoundation64d.dll' />
 
             <RegistryKey Id='AnsiOdbcRegInfo' 
                          Root='HKLM' 
@@ -62,42 +68,53 @@
             <File Id='UnicodeDriverDll'
                   Name='clickhouseodbcw.dll'
                   DiskId='1'
-                  Source='..\x64\Debug\clickhouseodbcw.dll'
+                  Source='..\x64\Release\clickhouseodbcw.dll'
                   KeyPath='yes' />
-            <File Id='UnicodePocoFoundationDll'
-                  Name='PocoFoundation64wd.dll'
-                  DiskId='1'
-                  Source='..\x64\Debug\PocoFoundation64wd.dll' />
-            <File Id='UnicodePocoNetdll'
-                  Name='PocoNet64wd.dll'
-                  DiskId='1'
-                  Source='..\x64\Debug\PocoFoundation64wd.dll' />            
+
+            <RegistryKey Id='UnicodeOdbcRegInfo'
+                         Root='HKLM'
+                         Key='SOFTWARE\ODBC\ODBCINST.INI\ClickHouse Unicode'
+                         ForceCreateOnInstall='yes'>
+              <RegistryValue Type='string' Name='Driver' Value='[INSTALLFOLDER]clickhouseodbcw.dll'/>
+              <RegistryValue Type='string' Name='Setup' Value='[INSTALLFOLDER]clickhouseodbcw.dll'/>
+              <RegistryValue Type='string' Name='Description' Value='ClickHouse ODBC Unicode'/>
+              <RegistryValue Type='string' Name='APILevel' Value='1'/>
+              <RegistryValue Type='string' Name='DriverODBCVer' Value='03.80'/>
+              <RegistryValue Type='string' Name='SQLLevel' Value='1'/>
+              <RegistryValue Type='string' Name='ConnectFunctions' Value='YYN'/>
+              <RegistryValue Type='string' Name='FileUsage' Value='0'/>
+            </RegistryKey>
+            <RegistryKey Id='UnicodeOdbcRegInstalled'
+                         Root='HKLM'
+                         Key='SOFTWARE\ODBC\ODBCINST.INI\ODBC Drivers'
+                         ForceCreateOnInstall='yes'>
+              <RegistryValue Type='string' Name='ClickHouse Unicode' Value='Installed' />
+            </RegistryKey>
           </Component>
           </Directory>
       </Directory>
     </Directory>
 
-    <MajorUpgrade DowngradeErrorMessage="A newer version of [ProductName] is already installed." />
-    <MediaTemplate />
-
     <!-- Features -->
-    <Feature Id='Complete' Title='Foobar 1.0' Description='The complete package.'
+    <Feature Id='Complete' Title='ClickHouse ODBC' Description='The complete package.'
     Display='expand' Level='1' ConfigurableDirectory='INSTALLFOLDER'>
       <Feature Id="AnsiDrivers"
-               Title="ClickHouse ODBC (ANSI)"
+               Title="ANSI drivers"
                Level="1" >
         <ComponentRef Id="AnsiDriver" />
+        <ComponentRef Id="PocoLibs" />
       </Feature>
       <Feature Id="UnicodeDrivers"
-               Title="ClickHouse ODBC (Unicode)"
+               Title="Unicode drivers"
                Level="1" >
         <ComponentRef Id="UnicodeDriver" />
+        <ComponentRef Id="PocoLibs" />
       </Feature>
     </Feature>
 
     <!-- UI -->
-    <Property Id="WIXUI_INSTALLDIR" Value="INSTALLDIR" />
-    <!-- <UIRef Id="WixUI_Minimal" /> -->
+    <UIRef Id="WixUI_Mondo" />
+    <WixVariable Id="WixUILicenseRtf" Value="license.rtf" />
     
   </Product>
 </Wix>
