--- a/vs/installer32/Product.wxs
+++ b/vs/installer32/Product.wxs
@@ -10,8 +10,15 @@
   <?define PKGNAME = "ClickHouse ODBC x32" ?>
   <?define PGFOLDER = "ProgramFilesFolder" ?>
   <?define DLL_PATH = "../$(var.Configuration)" ?>
-  <?define POCO_FOUNDATION = "PocoFoundation.dll" ?>
-  <?define POCO_NET = "PocoNet.dll" ?>
+
+  <?if $(var.Configuration) = Debug ?>
+    <?define POCO_FOUNDATION = "PocoFoundationd.dll" ?>
+    <?define POCO_NET = "PocoNetd.dll" ?>
+  <?else?>
+    <?define POCO_FOUNDATION = "PocoFoundation.dll" ?>
+    <?define POCO_NET = "PocoNet.dll" ?>
+  <?endif ?>
+
   <?define CrtMergeModule = "$(env.CommonProgramFiles)\Merge Modules\Microsoft_VC140_CRT_x86.msm" ?>
   <?define ANSI_ID = "5DFFB4E6-D747-4080-B733-69763772485C" ?>
   <?define POCOLIB_ID = "611EDC2C-2617-485E-81BE-2A9B4664E7BC" ?>
