--- a/vs/installer64/Product.wxs
+++ b/vs/installer64/Product.wxs
@@ -14,6 +14,8 @@
   <?if $(var.Configuration) = Debug ?>
     <?define POCO_FOUNDATION = "PocoFoundation64d.dll" ?>
     <?define POCO_NET = "PocoNet64d.dll" ?>
+	<?define POCO_FOUNDATION_PDB = "PocoFoundation64d.pdb" ?>
+    <?define POCO_NET_PDB = "PocoNet64d.pdb" ?>
   <?else?>
     <?define POCO_FOUNDATION = "PocoFoundation64.dll" ?>
     <?define POCO_NET = "PocoNet64.dll" ?>
@@ -62,7 +64,17 @@
             <File Id='PocoNetdll'
                   Name='$(var.POCO_NET)'
                   DiskId='1'
-                  Source='..\..\contrib\poco\bin64\$(var.POCO_NET)' />            
+                  Source='..\..\contrib\poco\bin64\$(var.POCO_NET)' />   
+			<?if $(var.Configuration) = Debug ?>
+				<File Id='PocoFoundationPdb'
+					Name='$(var.POCO_FOUNDATION_PDB)'
+					DiskId='1'
+					Source='..\..\contrib\poco\bin64\$(var.POCO_FOUNDATION_PDB)' />
+				<File Id='PocoNetPdb'
+					Name='$(var.POCO_NET_PDB)'
+					DiskId='1'
+					Source='..\..\contrib\poco\bin64\$(var.POCO_NET_PDB)' />   
+			<?endif ?>					  
           </Component>
           
           <Component Id="AnsiDriver" Guid="$(var.ANSI_ID)" Win64='$(var.BIT64)'>
@@ -71,7 +83,13 @@
                   DiskId='1'
                   Source='$(var.DLL_PATH)\clickhouseodbc.dll'
                   KeyPath='yes' />
-
+			<?if $(var.Configuration) = Debug ?>
+				<File Id='AnsiDriverPdb'
+					Name='clickhouseodbc.pdb'
+					DiskId='1'
+					Source='$(var.DLL_PATH)\clickhouseodbc.pdb'	/>
+			<?endif ?>			  
+				  
             <RegistryKey Id='AnsiOdbcRegInfo' 
                          Root='HKLM' 
                          Key='SOFTWARE\ODBC\ODBCINST.INI\ClickHouse ANSI'
@@ -98,7 +116,13 @@
                   DiskId='1'
                   Source='$(var.DLL_PATH)\clickhouseodbcw.dll'
                   KeyPath='yes' />
-
+			<?if $(var.Configuration) = Debug ?>
+				<File Id='UnicodeDriverPdb'
+					Name='clickhouseodbcw.pdb'
+					DiskId='1'
+					Source='$(var.DLL_PATH)\clickhouseodbcw.pdb' />
+			<?endif ?>
+			
             <RegistryKey Id='UnicodeOdbcRegInfo'
                          Root='HKLM'
                          Key='SOFTWARE\ODBC\ODBCINST.INI\ClickHouse Unicode'
