--- a/vs/installer64/Product.wxs
+++ b/vs/installer64/Product.wxs
@@ -56,26 +56,26 @@
       
       <Directory Id="$(var.PGFOLDER)">
         <Directory Id="INSTALLFOLDER" Name="ClickHouse ODBC">
-          <Component Id ="PocoLibs" Guid="$(var.POCOLIB_ID)" Win64='$(var.BIT64)'>
-            <File Id='PocoFoundationDll'
+          <!--Component Id ="PocoLibs" Guid="$(var.POCOLIB_ID)" Win64='$(var.BIT64)'>
+            <!- -File Id='PocoFoundationDll'
                   Name='$(var.POCO_FOUNDATION)'
                   DiskId='1'
                   Source='..\..\contrib\poco\bin64\$(var.POCO_FOUNDATION)' />
             <File Id='PocoNetdll'
                   Name='$(var.POCO_NET)'
                   DiskId='1'
-                  Source='..\..\contrib\poco\bin64\$(var.POCO_NET)' />   
+                  Source='..\..\contrib\poco\bin64\$(var.POCO_NET)' /- ->   
 			<?if $(var.Configuration) = Debug ?>
-				<File Id='PocoFoundationPdb'
+            <!- -File Id='PocoFoundationPdb'
 					Name='$(var.POCO_FOUNDATION_PDB)'
 					DiskId='1'
 					Source='..\..\contrib\poco\bin64\$(var.POCO_FOUNDATION_PDB)' />
 				<File Id='PocoNetPdb'
 					Name='$(var.POCO_NET_PDB)'
 					DiskId='1'
-					Source='..\..\contrib\poco\bin64\$(var.POCO_NET_PDB)' />   
+					Source='..\..\contrib\poco\bin64\$(var.POCO_NET_PDB)' /- ->   
 			<?endif ?>					  
-          </Component>
+          </Component-->
           
           <Component Id="AnsiDriver" Guid="$(var.ANSI_ID)" Win64='$(var.BIT64)'>
             <File Id='AnsiDriverDll'
@@ -154,13 +154,13 @@
                Title="ANSI drivers"
                Level="1" >
         <ComponentRef Id="AnsiDriver" />
-        <ComponentRef Id="PocoLibs" />
+        <!--ComponentRef Id="PocoLibs" /-->
       </Feature>
       <Feature Id="UnicodeDrivers"
                Title="Unicode drivers"
                Level="1" >
         <ComponentRef Id="UnicodeDriver" />
-        <ComponentRef Id="PocoLibs" />
+        <!--ComponentRef Id="PocoLibs" /-->
       </Feature>
       <Feature Id="CRT" AllowAdvertise="no" Display="hidden" Level="1" Title="Microsoft Visual C++ 2015 Runtime Components">
         <MergeRef Id="CRT"/>
