Use human-friendly names for drivers and DSNs in ODBC config samples and Windows registry entries written by installer

--- a/packaging/RegConfig.patch.wxs
+++ b/packaging/RegConfig.patch.wxs
@@ -1,7 +1,7 @@
 <CPackWiXPatch>
     <CPackWiXFragment Id="CM_CP_ANSIDriver.bin.clickhouseodbc.dll">
-        <RegistryKey ForceCreateOnInstall="yes" Id="AnsiOdbcDriverRegInfo" Key="SOFTWARE\ODBC\ODBCINST.INI\ClickHouseDriver" Root="HKLM">
-            <RegistryValue Name="Description" Type="string" Value="ClickHouse ANSI ODBC Driver"/>
+        <RegistryKey ForceCreateOnInstall="yes" Id="AnsiOdbcDriverRegInfo" Key="SOFTWARE\ODBC\ODBCINST.INI\ClickHouse ODBC Driver (ANSI)" Root="HKLM">
+            <RegistryValue Name="Description" Type="string" Value="ODBC Driver (ANSI) for ClickHouse"/>
             <RegistryValue Name="Driver" Type="string" Value="[CM_DP_ANSIDriver.bin]clickhouseodbc.dll"/>
             <RegistryValue Name="Setup" Type="string" Value="[CM_DP_ANSIDriver.bin]clickhouseodbc.dll"/>
             <RegistryValue Name="DriverODBCVer" Type="string" Value="03.80"/>
@@ -11,20 +11,20 @@
             <RegistryValue Name="FileUsage" Type="string" Value="0"/>
         </RegistryKey>
         <RegistryKey ForceCreateOnInstall="yes" Id="AnsiOdbcDriverRegInstalled" Key="SOFTWARE\ODBC\ODBCINST.INI\ODBC Drivers" Root="HKLM">
-            <RegistryValue Name="ClickHouseDriver" Type="string" Value="Installed"/>
+            <RegistryValue Name="ClickHouse ODBC Driver (ANSI)" Type="string" Value="Installed"/>
         </RegistryKey>
-        <RegistryKey ForceCreateOnInstall="yes" Id="AnsiOdbcDsnRegInfo" Key="SOFTWARE\ODBC\ODBC.INI\ClickHouseDSN_localhost" Root="HKLM">
-            <RegistryValue Name="Description" Type="string" Value="DSN for ClickHouse ANSI Driver (localhost)"/>
-            <RegistryValue Name="Driver" Type="string" Value="ClickHouseDriver"/>
+        <RegistryKey ForceCreateOnInstall="yes" Id="AnsiOdbcDsnRegInfo" Key="SOFTWARE\ODBC\ODBC.INI\ClickHouse DSN (ANSI)" Root="HKLM">
+            <RegistryValue Name="Description" Type="string" Value="DSN (localhost) for ClickHouse ODBC Driver (ANSI)"/>
+            <RegistryValue Name="Driver" Type="string" Value="ClickHouse ODBC Driver (ANSI)"/>
             <RegistryValue Name="Url" Type="string" Value="https://default:password@localhost:8443/query?database=default"/>
         </RegistryKey>
         <RegistryKey ForceCreateOnInstall="yes" Id="AnsiOdbcDsnRegInstalled" Key="SOFTWARE\ODBC\ODBC.INI\ODBC Data Sources" Root="HKLM">
-            <RegistryValue Name="ClickHouseDSN_localhost" Type="string" Value="ClickHouseDriver"/>
+            <RegistryValue Name="ClickHouse DSN (ANSI)" Type="string" Value="ClickHouse ODBC Driver (ANSI)"/>
         </RegistryKey>
     </CPackWiXFragment>
     <CPackWiXFragment Id="CM_CP_UnicodeDriver.bin.clickhouseodbcw.dll">
-        <RegistryKey ForceCreateOnInstall="yes" Id="UnicodeOdbcDriverRegInfo" Key="SOFTWARE\ODBC\ODBCINST.INI\ClickHouseDriverW" Root="HKLM">
-            <RegistryValue Name="Description" Type="string" Value="ClickHouse Unicode ODBC Driver"/>
+        <RegistryKey ForceCreateOnInstall="yes" Id="UnicodeOdbcDriverRegInfo" Key="SOFTWARE\ODBC\ODBCINST.INI\ClickHouse ODBC Driver (Unicode)" Root="HKLM">
+            <RegistryValue Name="Description" Type="string" Value="ODBC Driver (Unicode) for ClickHouse"/>
             <RegistryValue Name="Driver" Type="string" Value="[CM_DP_UnicodeDriver.bin]clickhouseodbcw.dll"/>
             <RegistryValue Name="Setup" Type="string" Value="[CM_DP_UnicodeDriver.bin]clickhouseodbcw.dll"/>
             <RegistryValue Name="DriverODBCVer" Type="string" Value="03.80"/>
@@ -34,15 +34,15 @@
             <RegistryValue Name="FileUsage" Type="string" Value="0"/>
         </RegistryKey>
         <RegistryKey ForceCreateOnInstall="yes" Id="UnicodeOdbcDriverRegInstalled" Key="SOFTWARE\ODBC\ODBCINST.INI\ODBC Drivers" Root="HKLM">
-            <RegistryValue Name="ClickHouseDriverW" Type="string" Value="Installed"/>
+            <RegistryValue Name="ClickHouse ODBC Driver (Unicode)" Type="string" Value="Installed"/>
         </RegistryKey>
-        <RegistryKey ForceCreateOnInstall="yes" Id="UnicodeOdbcDsnRegInfo" Key="SOFTWARE\ODBC\ODBC.INI\ClickHouseDSNW_localhost" Root="HKLM">
-            <RegistryValue Name="Description" Type="string" Value="DSN for ClickHouse Unicode Driver (localhost)"/>
-            <RegistryValue Name="Driver" Type="string" Value="ClickHouseDriverW"/>
+        <RegistryKey ForceCreateOnInstall="yes" Id="UnicodeOdbcDsnRegInfo" Key="SOFTWARE\ODBC\ODBC.INI\ClickHouse DSN (Unicode)" Root="HKLM">
+            <RegistryValue Name="Description" Type="string" Value="DSN (localhost) for ClickHouse ODBC Driver (Unicode)"/>
+            <RegistryValue Name="Driver" Type="string" Value="ClickHouse ODBC Driver (Unicode)"/>
             <RegistryValue Name="Url" Type="string" Value="https://default:password@localhost:8443/query?database=default"/>
         </RegistryKey>
         <RegistryKey ForceCreateOnInstall="yes" Id="UnicodeOdbcDsnRegInstalled" Key="SOFTWARE\ODBC\ODBC.INI\ODBC Data Sources" Root="HKLM">
-            <RegistryValue Name="ClickHouseDSNW_localhost" Type="string" Value="ClickHouseDriverW"/>
+            <RegistryValue Name="ClickHouse DSN (Unicode)" Type="string" Value="ClickHouse ODBC Driver (Unicode)"/>
         </RegistryKey>
     </CPackWiXFragment>
 </CPackWiXPatch>
